# OOD

./: .gitignore
geometric-factory/: CCircle.cpp  CCircle.h  CLineSegment.cpp  CLineSegment.h  CMakeLists.txt  CPoint.cpp  CPoint.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  Constants.h  FileShapeParser.cpp  FileShapeParser.h  Functions.cpp  Functions.h  IShape.h  ISolidShape.h  IVisualShape.h  ShapeFactory.cpp  ShapeFactory.h  main.cpp  test.cpp
geometric-factory/geometri.4808d497/Debug/geometri.4808d497.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  geometric-factory.lastbuildstate
geometric-factory/geometri.4808d497/x64/Debug/: geometric-factory.exe.recipe
geometric-factory/geometri.4808d497/x64/Debug/geometri.4808d497.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  geometric-factory.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
geometric-factory/geometric-shapes/x64/Debug/: geometric-shapes.exe.recipe
geometric-factory/geometric-shapes/x64/Debug/geometric-shapes.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  geometric-shapes.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/: CMakeLists.txt  input.txt  output.txt  запуск_1.txt
lab1/include/: App.h  CircleAdapter.h  Geometry.h  Parser.h  RectangleAdapter.h  ShapeAdapter.h  TriangleAdapter.h
lab1/src/: App.cpp  CircleAdapter.cpp  Geometry.cpp  Parser.cpp  RectangleAdapter.cpp  ShapeAdapter.cpp  TriangleAdapter.cpp  main.cpp
lab2/: CMakeLists.txt  input.txt  output.txt  запуск_2.txt
lab2/include/:  SelectionManager.h  App.h  CircleAdapter.h  CircleDecorator.h  CompositeShape.h  DragAndDrop.h  Geometry.h  Parser.h  RectangleAdapter.h  RectangleDecorator.h  ShapeAdapter.h  ShapeDecorator.h  TriangleAdapter.h  TriangleDecorator.h
lab2/src/: App.cpp  CircleAdapter.cpp  CircleDecorator.cpp  CompositeManager.cpp  CompositeShape.cpp  DragAndDrop.cpp  Geometry.cpp  Parser.cpp  RectangleAdapter.cpp  RectangleDecorator.cpp  SelectionManager.cpp  ShapeAdapter.cpp  ShapeDecorator.cpp  TriangleAdapter.cpp  TriangleDecorator.cpp  main.cpp
lab3/: CMakeLists.txt  запуск_3.txt
lab3/include/: AddShapeCommand.h  AddShapeState.h  Application.h  ChangeStyleCommand.h  CircleAdapter.h  Command.h  CompositeManager.h  CompositeShape.h  DragAndDrop.h  EditorState.h  FillState.h  Geometry.h  GroupCommand.h  MoveCommand.h  Parser.h  RectangleAdapter.h  SelectState.h  SelectionManager.h  ShapeAdapter.h  StateFactory.h  Toolbar.h  TriangleAdapter.h  constants.h
lab3/src/: AddShapeCommand.cpp  AddShapeState.cpp  Application.cpp  ChangeStyleCommand.cpp  CircleAdapter.cpp  CompositeManager.cpp  CompositeShape.cpp  DragAndDrop.cpp  FillState.cpp  Geometry.cpp  GroupCommand.cpp  MoveCommand.cpp  Parser.cpp  RectangleAdapter.cpp  SelectState.cpp  SelectionManager.cpp  ShapeAdapter.cpp  StateFactory.cpp  Toolbar.cpp  TriangleAdapter.cpp  main.cpp
strategy/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  RedheadDuck.h
strategy/SimUDuck/lib/Duck/Dance/: IDanceBehavior.h
strategy/SimUDuck/x64/Debug/: SimUDuck.exe.recipe  SimUDuck.ilk  vc143.idb
strategy/SimUDuck/x64/Debug/SimUDuck.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
strategy/ducks/: ducks.cpp
strategy/ducks/x64/Debug/: ducks.exe.recipe  ducks.ilk  vc143.idb
strategy/ducks/x64/Debug/ducks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ducks.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
